bk_ida/gccida/g1/subst_asm_stack_regs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2363:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2363:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2370:4: error: expected ';' after expression
rtx v41; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2370:5: error: use of undeclared identifier 'v41'
rtx v41; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2376:6: error: use of undeclared identifier 'v47'
rtx *v47; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2377:7: error: use of undeclared identifier 'v48'
rtx **v48; // r14 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2384:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2384:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2386:6: error: use of undeclared identifier 'v57'
rtx *v57; // r15 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2393:4: error: expected ';' after expression
rtx v64; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2393:5: error: use of undeclared identifier 'v64'
rtx v64; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2400:4: error: expected ';' after expression
rtx v71; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2400:5: error: use of undeclared identifier 'v71'
rtx v71; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2403:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note *v74; // r13 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2405:4: error: expected ';' after expression
rtx v76; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2405:5: error: use of undeclared identifier 'v76'
rtx v76; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2408:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note *v79; // r13 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2409:7: error: use of undeclared identifier 'v80'
rtx **v80; // r14 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/reg-stack.c:2411:7: error: use of undeclared identifier 'clobber_loc'
rtx **clobber_loc; // [rsp+10h] [rbp-90h] 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_asm_stack_regs/src/obj/reg-stack.o] Error 1
